[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/tiles/industrial.v2.png" type="Texture" id=1]
[ext_resource path="res://scenes/models/level objects/turret.gd" type="Script" id=2]
[ext_resource path="res://scenes/models/Bullets/EnemyBullet.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.78891, 8.7507 )

[node name="Turret" type="Area2D"]
position = Vector2( 456.14, 367.05 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_horizontal_guides_": [  ]
}
Bullet = ExtResource( 3 )
cool_down = 0.4
detect_radius = 100

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 162.834, 320.867, 10.281, 15.1644 )

[node name="hitbox" type="Area2D" parent="."]
modulate = Color( 0.0745098, 0.584314, 0.0705882, 1 )
scale = Vector2( 2, 2 )
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.790649, -70.2448 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 0, -12.1597 )

[node name="GunTimer" type="Timer" parent="."]
autostart = true
[connection signal="body_entered" from="." to="." method="_on_StaticBody2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_StaticBody2D_body_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
